Update README to remove compile section
Removed compile instructions from the README.